[package]
name = "dio2bib"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26"        # The GUI framework
reqwest = { version = "0.11", features = ["json", "blocking"] } 
tokio = { version = "1", features = ["full"] }
csv = "1.3"
rfd = "0.14"           # Native File Dialog (File Picker)
anyhow = "1.0"
